# Planktoscope_ClassifierGUI

./: INSTALLATION.md  LICENSE  License.txt  README.md  TRAINING_GUIDE.md  inference.py  install.sh  main.py  pyproject.toml  raw_mode.py  segmented_mode.py  tensorrt_export.py  trainer.py
your_package_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
